- urpmi:
  o add support for --reinstall
- urpmq:
  o display epoch when using -i (mga#25735)
- cpan_testers:
  o actually needs perl >= 5.10 for //= operator
  o fix failing scriptlets test with rpm < 4.13.0
  o fix testsuite errors on CentOs (NVR vs NVRA)
  o require a newer enough Test::More & rpmtools
  o skip mirrorlist tests on !Mageia
  o skip tests if we have no supported downloader
  o skip weak deps test on CentOS 7 (unsupported)
  o testsuite needs rpmtools

Version 8.120 - 21 October 2019

- fix test for whether any 32-bit packages are installed

Version 8.119 - 19 October 2019

- when adding distrib media, enable 32-bit media if needed (mga#24438)
- translations updates

Version 8.118 - 22 June 2019

- ensure downloaded files are world-readable (mga#24636)

Version 8.117 - 21 June 2019

- ensure urpmi config and cache files are world-readable (mga#24636)

Version 8.116 - 27 May 2019

- don't enable 32-bit media by default on 64-bit systems (mga#24376)
  o except on systems with 32-bit EFI, where we need the Core 32bit
    media for the bootloader

Version 8.115 - 1 May 2019

- library:
  o fix _rpm_version() when rpm is translated
  o use proper versionning (RT#127142)
- testsuite:
  o make it work with rpm < 4.14.2 again
- cpan_testers:
  o add missing spec file
  o make it work with perl < 5.22.0
  o skip network tests if we don't have a downloader
  o update deps
- translations updates

Version 8.114 - 17 September 2018

- enhanced doc
- fix testsuite with rpm-4.14.2

Version 8.113 - 14 September 2018

- adapt testsuite to rpm-4.14.0~rc1
- add support for verify callback when installing (mga#23531)

Version 8.112 - 14 June 2018

- cpan testers:
  o add metadata
  o list needed deps
- urpmi_rpm-find-leaves
  o fix running with perl-5.26 (mga#23172)

Version 8.111 - 19 September 2017

- gurpmi:
  o update perl-Pango first too (mga#21425)
- urpmi:
  o update perl-base first too
  o use XML::LibXML::Parser's 'huge' option

Version 8.110 - 13 July 2017
