@@ -1,0 +1,7 @@
+package urpmi;
+
+# Dummy package for CPAN testers
+
+our $VERSION = '8.120';
+
+1;
